Align private text to prevent wrapping with icons are present.

--- a/src/cards/private.scss
+++ b/src/cards/private.scss
@@ -94,7 +94,7 @@
 .private__icon,
 .private__company {
   float: left;
-  padding: 0 1em 1em 0;
+  padding: 0 1em 7em 0;
   width: 0.3in;
   height: 0.3in;
 
